# rsync-bkapp

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  renovate.json
.github/workflows/: python-app.yaml
src/: logger.py  main.py
tests/unittests/: test_logger.py  test_main.py
